<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderComplete">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/g_success"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:fontFamily="@font/bold"
            android:text="@string/congratulations"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/thin"
            android:textSize="20dp"
            android:text="@string/message_success"
            android:layout_marginHorizontal="60dp"
            android:gravity="center"
            android:layout_marginTop="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_go_tracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="60dp"
            android:layout_marginTop="50dp"
            app:backgroundTint="@color/color_accent"
            app:cornerRadius="10dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/track_order"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/button_go_shopping"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/color_accent"
            app:strokeWidth="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/thin"
                android:text="@string/continue_shopping"
                android:textColor="@color/color_accent"/>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</FrameLayout>