<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderlistActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/color_accent">

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:strokeWidth="0dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="25dp"
            app:cardCornerRadius="13dp"
            android:layout_gravity="start|center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back"
                    android:layout_margin="5dp"
                    android:layout_gravity="start|center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_back"
                    android:fontFamily="@font/thin"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"/>
            </LinearLayout>


        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_basket"
            android:fontFamily="@font/thin"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:layout_gravity="center"/>

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_my_basket"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/basket_row"
            tools:itemCount="3"/>
        <TextView
            android:id="@+id/text_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_basket"
            android:fontFamily="@font/thin"
            android:textSize="23dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/thin"
                    android:textStyle="bold"
                    android:text="@string/total"
                    android:textSize="16dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/coin_black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/thin"
                        android:layout_marginStart="5dp"
                        android:textStyle="bold"
                        android:text="60,000"
                        android:textSize="24dp"/>


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_checkout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minHeight="60dp"
                app:backgroundTint="@color/color_accent"
                app:cornerRadius="10dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/checkout"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>